# NIRSViz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/NIRS/: imgui.ini
Assets/Shaders/: Cortex.frag  FlatColor.frag  FlatColor.vert  Line.vert  Phong.frag  Phong.vert  Point.vert  Projection.frag  Projection.vert  Texture.frag  Texture.vert
Include/App/Data/: MeshGraph.h  Transform.h
Include/App/Layer/: AtlasLayer.h  ChannelSelectorLayer.h  FileLayer.h  MainViewportLayer.h  PlottingLayer.h  ProbeLayer.h  ProjectionLayer.h
Include/Core/Window/: GraphicsContext.h  Window.h
Include/Renderer/Buffer/: VertexArray.h  VertexBuffer.h
Include/Renderer/Camera/: Camera.h  OrbitCamera.h  OrthogonalCamera.h  RoamCamera.h
Include/Renderer/Renderable/: IdentityLineRenderer.h  LineRenderer.h  Mesh.h  PointRenderer.h  Texture.h
Source/: main.cpp
Source/App/Data/: MeshGraph.cpp  Raycast.cpp
Source/App/Layer/: AtlasLayer.cpp  ChannelSelectorLayer.cpp  FileLayer.cpp  MainViewportLayer.cpp  PlottingLayer.cpp  ProbeLayer.cpp  ProjectionLayer.cpp
Source/Core/: Application.cpp
Source/Core/Window/: GraphicsContext.cpp  Window.cpp
Source/NIRS/: Snirf.cpp
Source/Renderer/: Renderer.cpp
Source/Renderer/Buffer/: Framebuffer.cpp  IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
Source/Renderer/Camera/: OrbitCamera.cpp  OrthogonalCamera.cpp  (+1 more)
include/: AtlasLayer.h  MainViewportLayer.h  Mesh.h  MeshGraph.h  PlottingLayer.h  ProbeLayer.h  ProjectionLayer.h  Raycast.h  Vertex.h  pch.h
include/Core/: Application.h  AssetManager.h  Base.h  ECS.h  Input.h  Layer.h  LayerStack.h  Window.h
include/Events/: ApplicationEvent.h  Commands.h  KeyCodes.h  KeyEvent.h  MouseCodes.h  MouseEvent.h
include/GUI/: ImGuiLayer.h
include/NIRS/: NIRS.h  Snirf.h
include/Renderer/: BufferLayout.h  Camera.h  Framebuffer.h  LineRenderer.h  Mesh.h  OrbitCamera.h  PointRenderer.h  Renderer.h  RoamCamera.h  Shader.h  VertexArray.h  VertexBuffer.h  ViewportManager.h
src/: AtlasLayer.cpp  FileLayer.cpp  MainViewportLayer.cpp  Mesh.cpp  MeshGraph.cpp  PlottingLayer.cpp  ProbeLayer.cpp  ProjectionLayer.cpp  Raycast.cpp
src/Core/: Application.cpp  Input.cpp  Log.cpp  Window.cpp
src/GUI/: ImGuiLayer.cpp
src/NIRS/: Processing.cpp  Snirf.cpp
src/Renderer/: Framebuffer.cpp  GraphicsContext.cpp  LineRenderer.cpp  Mesh.cpp  OrbitCamera.cpp  PointRenderer.cpp  Renderer.cpp  RoamCamera.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp
(+5 files in other folders)
